--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: n0n1yzh
+title: YZH的记事薄
 subtitle:
-description: 'life is fun'
+description: '彼岸花，后面忘了'
 keywords:
 author: n0n1yzh
 language: zh-CN
