--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -19,7 +19,6 @@ menu:
 
 # Hide the child menu items in mobile sidebar
 hide_sidebar_menu_child: false
-
 # Code Blocks (代碼相關)
 # --------------------------------------
 
@@ -66,8 +65,8 @@ local_search:
 
 # MathJax
 mathjax:
-  enable: false
-  per_page: false
+  enable: true
+  per_page: true
 
 # KaTeX
 katex:
@@ -83,7 +82,8 @@ favicon: /img/favicon.png
 
 # Avatar (頭像)
 avatar:
-  img: https://s1.ax1x.com/2020/11/04/BcHra4.jpg
+  # img: https://s1.ax1x.com/2020/11/04/BcHra4.jpg
+  img: https://s3.ax1x.com/2021/01/19/scRg6H.jpg
   effect: false
 
 # The banner image of home page
@@ -175,7 +175,7 @@ toc:
   number: true
 
 post_copyright:
-  enable: true
+  enable: false
   decode: false
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
@@ -595,8 +595,8 @@ subtitle:
   # 開頭不允許轉義字元，如需要，請把整個句子用雙引號包住
   # 如果關閉打字效果，subtitle只會顯示sub的第一行文字
   sub:
-    - Life is fun
-    - yzh is funny
+    - 彼岸花
+    - 后面忘了
 
 # Loading Animation (加載動畫)
 preloader: false
@@ -618,8 +618,8 @@ aside:
       text: Follow Me
       link: https://github.com/n0n1yzh
   card_announcement:
-    enable: true
-    content: This is my World
+    enable: false
+    content: 彼岸花，后面忘了
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -646,9 +646,9 @@ aside:
 # busuanzi count for PV / UV in site
 # 訪問人數
 busuanzi:
-  site_uv: true
-  site_pv: true
-  page_pv: true
+  site_uv: false
+  site_pv: false
+  page_pv: false
 
 # Time difference between publish date and now (網頁運行時間)
 # Formal: Month/Day/Year Time or Year/Month/Day Time
