--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "5.2.0"
   },
   "dependencies": {
+    "@neilsustc/markdown-it-katex": "^0.6.1",
+    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "hexo": "^5.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
@@ -19,6 +21,7 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
